<resources>
    <string name="app_name">DigitalGameDeals</string>
    <string name="search_text">Search</string>
    <string name="button_text">Go!</string>
    <string name="group_name">Group 15</string>
    <string name="game_number">1</string>
    <string name="game_title">Game Title</string>
    <string name="game_name"> \" game name \"</string>
    <string name="game_price">cheapest price</string>
    <string name="game_rating">rating</string>
    <string name="price_label">Sale Price</string>
    <string name="deal_label">Deal Price</string>
    <string name="store_label">Store</string>
    <string name="logo_description">logo of Digital Game Deals</string>
    <string name="thumbnail_description">thumbnail of Game</string>
    <string name="OnSale_text">Games On Sale</string>
    <string name="sort_text">Sort</string>
    <string name="sort_option">Lowest to Highest Price</string>
</resources>